<resources>
    <string name="app_name">Baking App</string>

    <bool name="isItInLandscape">false</bool>
    <bool name="isItInPhone">true</bool>

    <string name="baking_json_url" translatable="false">https://d17h27t6h515a5.cloudfront.net/topher/2017/May/59121517_baking/baking.json</string>
    <string name="current_receipe">CurrentRecipe</string>

    <string name="no_internet_connection_title">No Internet Connection</string>
    <string name="no_internet_connection_message">It looks like your internet connection is off. \n Please turn it on and try again</string>
    <string name="error_message_title">Error Message</string>
    <string name="no_video_link">There is no video for this instruction.</string>
    <string name="appwidget_text">Recipe</string>
    <string name="add_widget">Add widget</string>

    <string name="id">id</string>

    <string name="previous_button">Previous</string>
    <string name="next_button">Next</string>

    <string name="step_title">Steps</string>
    <string name="no_previous_step">This is first step of instruction. No previous step.</string>
    <string name="no_next_step">This is last step of instruction. No next step.</string>

    <string name="recipe_list">RecipeList</string>
    <string name="current_step_data">currentStepData</string>
    <string name="recipe_data">recipeData</string>
    <string name="recipe_name">RecipeName</string>
    <string name="number_of_steps">numberOfSteps</string>

    <string name="video_player_name">StepVideo</string>

    <string name="Ingredients_Title">Ingredients</string>
    <string name="Direction_Title">Directions</string>
    <string name="Instruction_Title">Instruction</string>

</resources>
