...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_gravity="bottom">

        <Button
            android:id="@+id/previous_step_button"
            style="@style/PreviousButton"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <View style="@style/DividerInVertical" />

        <Button
            android:id="@+id/next_step_button"
            style="@style/NextButton"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>
...
