...
                    android:padding="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recipe_detail_steps_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>
...
